# kobel-shell

./: .gitignore  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  justfile
.impeccable/critique/: 2026-07-03T12-39-24Z__docs-prototype-html.md  2026-07-03T14-20-14Z__docs-prototype-html.md  2026-07-03T17-14-43Z__docs-prototype-html.md
ags/: README.md  app.ts  config.ts  tsconfig.json
ags/lib/: demo.ts  fixedchev.ts  fuzzy.ts  inspect.ts  spring.ts  surface.ts  tinyslider.ts
ags/scripts/: _session.sh  profile-surfaces.sh  run-in-gnoblin.sh
ags/services/: gnoblin.ts  notifd.ts
ags/style/: main.scss
ags/widget/: Bar.tsx  Calendar.tsx  DismissLayer.tsx  Dock.tsx  Launcher.tsx  Notifications.tsx  OSD.tsx  QuickSettings.tsx  Session.tsx
archive/: qml-PLAN.md  qml-mockup.html  qml-shell.qml
archive/ags/: .prettierrc  README.md
archive/ags/lib/: demo.ts  inspect.ts
archive/ags/scripts/: _session.sh  run-in-gnoblin.sh
archive/ags/services/: gnoblin.ts
archive/ags/widget/: Bar.tsx  Calendar.tsx  Dock.tsx  Notifications.tsx  QuickSettings.tsx  Session.tsx
archive/freya-ui-v1/: README.md
archive/freya-ui-v1/examples/: render_panel.rs
archive/freya-ui-v1/src/: motion.rs  theme.rs
archive/freya-ui-v1/src/ui/: bar.rs  chip.rs  dock.rs  fuzzy.rs  menu.rs  mod.rs  notifications.rs  osd.rs  quick_settings.rs
archive/qml-modules/: Bar.qml
crates/kobel-bar/: Cargo.toml
crates/kobel-bar/src/: lib.rs  main.rs  notifications.rs  quick_settings.rs  session.rs
crates/kobel-dock/: Cargo.toml
crates/kobel-dock/src/: lib.rs  main.rs
crates/kobel-ipc/: Cargo.toml
crates/kobel-ipc/src/: lib.rs
crates/kobel-services/: Cargo.toml
crates/kobel-services/examples/: services-probe.rs
crates/kobel-services/src/: apps.rs  audio.rs  battery.rs  bluetooth.rs  calendar.rs  exec.rs  gnoblin.rs  icons.rs  lib.rs  mpris.rs  network.rs  notifd.rs  sysctl.rs  tray.rs
crates/kobel-shell/: Cargo.toml
crates/kobel-shell/examples/: render_panel.rs
crates/kobel-shell/src/: ipc.rs  lib.rs  main.rs  manager.rs  motion.rs  theme.rs
crates/kobel-shell/src/ui/: bar.rs  calendar.rs  chip.rs  dock.rs  fuzzy.rs  launcher.rs  menu.rs  mod.rs  notifications.rs  osd.rs  panels.rs  quick_settings.rs  session.rs
crates/kobel-theme/: Cargo.toml
crates/kobel-theme/LICENSES/: Geist-OFL.txt
crates/kobel-theme/src/: icons.rs  lib.rs
crates/kobel-ui/: Cargo.toml  README.md
crates/kobel-ui/src/: lib.rs  main.rs
crates/kobel-ui/tests/: empty_root.rs
crates/kobel-wayland/: Cargo.toml
crates/kobel-wayland/examples/: popup.rs  spike.rs
crates/kobel-wayland/src/: conn.rs  egl.rs  frame.rs  ime.rs  input.rs  lib.rs  surface.rs  toplevel.rs
docs/: FREYA-PLAN.md  mockup.html  phosphor-icon-picker.html  prototype.html
modules/: Bar.qml
scripts/: _bar_dock_session.sh  _capture_session.sh  _shell_session.sh  _spike_session.sh  capture-frame-in-gnoblin.sh  devkit_input.py  rdc_capture.py  run-bar-dock-in-gnoblin.sh  run-shell-in-gnoblin.sh  run-spike-in-gnoblin.sh
services/: Gnoblin.qml
tools/freya-devtools-app/: Cargo.toml
tools/freya-devtools-app/src/: main.rs  node.rs  state.rs
tools/freya-devtools-app/src/components/: attribute.rs
tools/freya-devtools-app/src/tabs/: layout.rs  misc.rs  style.rs  text_style.rs  tree.rs
