# kobel-shell Rust workspace. See docs/FREYA-PLAN.md for the architecture.
# Freya is pinned to one main-branch rev; upgrade deliberately, never track live.

[workspace]
resolver = "3"
members = [
    "crates/kobel-ipc",
    "crates/kobel-wayland",
    "crates/kobel-services",
    "crates/kobel-shell",
    "crates/kobel-theme",
    "crates/kobel-bar",
    "crates/kobel-dock",
    "third_party/freya-devtools",
    "tools/freya-devtools-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Production uses direct crates and remains winit-free. The optional `freya` facade
# exists only for the bar/dock devtools preview binaries and the inspector.
freya = { git = "https://github.com/marc2332/freya", rev = "5810dc4a2304ee1a653eb63b5cbb40d41bbff4d6", default-features = false }
freya-core = { git = "https://github.com/marc2332/freya", rev = "5810dc4a2304ee1a653eb63b5cbb40d41bbff4d6" }
freya-winit = { git = "https://github.com/marc2332/freya", rev = "5810dc4a2304ee1a653eb63b5cbb40d41bbff4d6" }
freya-engine = { git = "https://github.com/marc2332/freya", rev = "5810dc4a2304ee1a653eb63b5cbb40d41bbff4d6" }
freya-components = { git = "https://github.com/marc2332/freya", rev = "5810dc4a2304ee1a653eb63b5cbb40d41bbff4d6" }
freya-animation = { git = "https://github.com/marc2332/freya", rev = "5810dc4a2304ee1a653eb63b5cbb40d41bbff4d6" }
freya-clipboard = { git = "https://github.com/marc2332/freya", rev = "5810dc4a2304ee1a653eb63b5cbb40d41bbff4d6" }
torin = { git = "https://github.com/marc2332/freya", rev = "5810dc4a2304ee1a653eb63b5cbb40d41bbff4d6" }
freya-router = { git = "https://github.com/marc2332/freya", rev = "5810dc4a2304ee1a653eb63b5cbb40d41bbff4d6" }
freya-radio = { git = "https://github.com/marc2332/freya", rev = "5810dc4a2304ee1a653eb63b5cbb40d41bbff4d6" }
# Dev-only headless component runner for UI tests.
freya-testing = { git = "https://github.com/marc2332/freya", rev = "5810dc4a2304ee1a653eb63b5cbb40d41bbff4d6" }
accesskit = "0.24"

# Wayland host
smithay-client-toolkit = { version = "0.20", features = ["calloop"] }
wayland-client = "0.31"
wayland-backend = "0.3"
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
# wlr-* protocol extensions not carried by wayland-protocols itself. The host
# uses zwlr_foreign_toplevel_manager_v1 for window discovery and control; sctk
# 0.20 has no delegate for it, only the newer listing-only ext-* protocol.
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-egl = "0.32"
khronos-egl = { version = "6", features = ["dynamic"] }
calloop = "0.14"
calloop-wayland-source = "0.4"
keyboard-types = "0.8"
futures-channel = "0.3"

# Services
zbus = "5"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "time", "sync"] }
libpulse-binding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Shared
async-io = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Atomic single-instance lock for the control socket (ipc.rs): flock() closes a
# TOCTOU race a plain connect()-based "is anyone listening?" check cannot -- two
# instances racing to start at nearly the same instant could otherwise both pass
# the check before either has bound, and the second unlink+bind would stomp the
# first's socket out from under it.
libc = "0.2"

# Internal
kobel-ipc = { path = "crates/kobel-ipc" }
kobel-wayland = { path = "crates/kobel-wayland" }
kobel-services = { path = "crates/kobel-services", default-features = false }
kobel-shell = { path = "crates/kobel-shell" }
kobel-theme = { path = "crates/kobel-theme" }

[patch."https://github.com/marc2332/freya"]
freya-devtools = { path = "third_party/freya-devtools" }

[profile.release]
# Thin LTO: meaningful runtime win for a per-frame Skia/EGL renderer at a much
# smaller build-time cost than fat LTO (`lto = true`) -- this app rebuilds
# release binaries often enough (every devkit RenderDoc capture, every real
# deploy) that a multi-minute fat-LTO link isn't worth it for the marginal
# gain over thin.
lto = "thin"
# No debug symbols in the shipped binary: smaller artifact, no internal
# symbol names leaking into a release build. Debug builds are unaffected
# (this profile only applies to `--release`).
strip = true
