[package]
name = "kobel-bar"
description = "Independent Freya top bar for kobel-shell"
default-run = "kobel-bar"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
devtools = ["dep:freya", "freya/devtools", "freya/winit"]

[dependencies]
anyhow = { workspace = true }
freya-core = { workspace = true }
freya-components = { workspace = true }
async-io = { workspace = true }
chrono = { workspace = true }
kobel-services = { workspace = true }
kobel-theme = { workspace = true }
kobel-wayland = { workspace = true }
torin = { workspace = true }
freya = { workspace = true, optional = true }

[dev-dependencies]
freya-testing = { workspace = true }

[[bin]]
name = "kobel-bar-preview"
path = "src/bin/preview.rs"
required-features = ["devtools"]
