[package]
name = "kobel-dock"
description = "Independent Freya dock for kobel-shell"
default-run = "kobel-dock"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
devtools = ["dep:freya", "freya/devtools", "freya/winit"]

[dependencies]
anyhow = { workspace = true }
freya-core = { workspace = true }
kobel-wayland = { workspace = true }
torin = { workspace = true }
freya = { workspace = true, optional = true }

[dev-dependencies]
freya-testing = { workspace = true }

[[bin]]
name = "kobel-dock-preview"
path = "src/bin/preview.rs"
required-features = ["devtools"]
