[package]
name = "kobel-services"
description = "System services for kobel-shell (zbus/tokio, zero UI)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# zbus over tokio: the `tokio` feature switches zbus's executor/transport to
# tokio (compile-time cfg), so the connections live on our tokio runtime.
zbus = { workspace = true, features = ["tokio"] }
# `net` gives tokio the IO driver zbus needs (UnixStream) + enable_all();
# `io-util` powers the exec/gsettings child stdio and the settings line reader.
tokio = { workspace = true, features = ["io-util", "net", "process"] }
libpulse-binding = { workspace = true }
futures-util = "0.3"
tracing = { workspace = true }
# Desktop-entry scan (apps.rs): XDG_DATA_HOME + XDG_DATA_DIRS applications dirs.
freedesktop-desktop-entry = "0.8"
# Icon theme lookup (apps.rs): theme -> Inherits -> hicolor -> /usr/share/pixmaps.
freedesktop-icons = "0.4"

[dev-dependencies]
tracing-subscriber = { workspace = true }
