[package]
name = "kobel-services"
description = "System services for kobel-shell (zbus/tokio, zero UI)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# zbus over tokio: the `tokio` feature switches zbus's executor/transport to
# tokio (compile-time cfg), so the connections live on our tokio runtime.
zbus = { workspace = true, features = ["tokio"] }
# `net` gives tokio the IO driver zbus needs (UnixStream) + enable_all();
# `io-util` powers the exec/gsettings child stdio and the settings line reader.
tokio = { workspace = true, features = ["io-util", "net", "process"] }
libpulse-binding = { workspace = true }
futures-util = "0.3"
tracing = { workspace = true }
# Desktop-entry scan (apps.rs): XDG_DATA_HOME + XDG_DATA_DIRS applications dirs.
freedesktop-desktop-entry = "0.8"
# Icon theme lookup (apps.rs): theme -> Inherits -> hicolor -> /usr/share/pixmaps.
freedesktop-icons = "0.4"
# SNI tray host (tray.rs): async StatusNotifierWatcher/host + item cache. The
# default `data` feature keeps the merged item map we read on every event.
# Uses zbus 5, unified with our workspace pin.
system-tray = "0.8"
# Notification persistence (notifd.rs): serialize the stored notifications to
# disk. Workspace serde already enables the derive feature.
serde = { workspace = true }
serde_json = { workspace = true }
# Notification store lock (notifd.rs): parking_lot guards return without an
# unwrap path (rs-parking-lot rule) and are never held across an await.
parking_lot = "0.12"

[dev-dependencies]
tracing-subscriber = { workspace = true }
