[package]
name = "kobel-services"
description = "System services for kobel-shell (zbus/tokio, zero UI)"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["tray"]
tray = ["dep:system-tray"]

[dependencies]
# Keep zbus on its default async-io backend. Enabling `zbus/tokio` changes the
# executor for every unified zbus user, including AccessKit in native Freya
# previews, which then panics before a Tokio runtime exists.
zbus = { workspace = true }
# Tokio owns the services orchestration thread; zbus's runtime-independent
# futures are polled there without changing zbus's process-wide backend.
tokio = { workspace = true, features = ["io-util", "net", "process"] }
libpulse-binding = { workspace = true }
futures-util = "0.3"
# Epoch/local-time math for the calendar service (all-day detection via
# midnight alignment). `clock` gives Local; no other features needed.
chrono = { workspace = true }
tracing = { workspace = true }
# Desktop-entry scan (apps.rs): XDG_DATA_HOME + XDG_DATA_DIRS applications dirs.
freedesktop-desktop-entry = "0.8"
# Watch XDG application directories for install, removal and metadata updates so
# consumers receive fresh snapshots without restarting the service runtime.
inotify = "0.11"
# Icon theme lookup (apps.rs): theme -> Inherits -> hicolor -> /usr/share/pixmaps.
freedesktop-icons = "0.4"
# SNI tray host (tray.rs): optional because `system-tray` forces zbus's Tokio
# backend process-wide. Small independent surfaces do not need SNI and can
# disable default features so their native Freya previews retain async-io.
system-tray = { version = "0.8", optional = true }
# Notification persistence (notifd.rs): serialize the stored notifications to
# disk. Workspace serde already enables the derive feature.
serde = { workspace = true }
serde_json = { workspace = true }
# Notification store lock (notifd.rs): parking_lot guards return without an
# unwrap path (rs-parking-lot rule) and are never held across an await.
parking_lot = "0.12"

[[example]]
name = "services-probe"
required-features = ["tray"]

[dev-dependencies]
tracing-subscriber = { workspace = true }
