[package]
name = "kobel-shell"
description = "The kobel shell: chrome for gnoblin, rendered by Freya"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kobel-ipc = { workspace = true }
kobel-wayland = { workspace = true }
kobel-services = { workspace = true }
freya-core = { workspace = true }
freya-engine = { workspace = true }
freya-animation = { workspace = true }
freya-components = { workspace = true }
# Ctrl+C/X/V in the launcher's text field (real Wayland clipboard, wired via
# kobel-wayland's SurfaceConfig::clipboard opt-in -- see ui/launcher.rs).
freya-clipboard = { workspace = true }
torin = { workspace = true }
async-io = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Graceful shutdown on SIGTERM/SIGINT -- see the workspace Cargo.toml comment.
signal-hook = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
futures-channel = { workspace = true }
freya-testing = { workspace = true }

# render-panel: headless, compositor-free layout preview for a single surface
# body (dev tool; see examples/render_panel.rs).
[[example]]
name = "render-panel"
path = "examples/render_panel.rs"
