[package]
name = "kobel-shell"
description = "Core shell coordination and public UI integration API for kobel"
version.workspace = true
edition.workspace = true
license.workspace = true
autobins = false
autoexamples = false

[dependencies]
kobel-ipc = { workspace = true }
kobel-wayland = { workspace = true }
kobel-services = { workspace = true }
freya-core = { workspace = true }
async-io = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
